<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_login">PETCare</string>
    <string name="login_title">PETCare</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="remember_me">Remember Me</string>
    <string name="employee_checkbox">Empleado</string>
    <string name="client_checkbox">Cliente</string>
    <string name="login_button">Login</string>
    <string name="register_prompt">No tienes una cuenta? </string>
    <string name="register_link">Regístrate.</string>
    <string name="select_client_or_employee">Selecciona Cliente o Empleado</string>
    <string name="app_name">PETCare</string>
    <string name="select_usertype">Seleccionar el tipo de usuario en la aplicación</string>
    <string name="btn_employee">Empleado</string>
    <string name="btn_client">Cliente</string>
    <string name="clientetitle">Datos Usuario Cliente</string>
    <string name="nombrecliente">Nombre</string>
    <string name="apellidocliente">Apellido</string>
    <string name="telefonocliente">Teléfono</string>
    <string name="rutcliente">RUT</string>
    <string name="contrasenacliente">Contraseña</string>
    <string name="confirmacioncontrasenacliente">Confirmar Contraseña</string>
    <string name="nombremascotas">Nombre mascotas </string>
    <string name="btnconfirmacion">OK</string>
    <string name="employee_title">PETCare</string>
    <string name="employee_info">Datos usuario tipo Empleado</string>
    <string name="employee_name">Nombre:</string>
    <string name="employee_enter_name">Ingresar Nombre</string>
    <string name="employee_lastname">Apellido:</string>
    <string name="employee_enter_lastname">Ingresar Apellido</string>
    <string name="employee_phone">Teléfono:</string>
    <string name="employee_rut">RUT:</string>
    <string name="employee_enter_rut">Ingresar RUT</string>
    <string name="employee_password">Contraseña:</string>
    <string name="employee_confirm_password">Confirmar Contraseña:</string>
    <string name="btn_confirm">OK</string>
    <string name="open_menu_lateral" >Abrir menú</string>
    <string name="close_menu_lateral" >Cerrar menú</string>
    <string name="PETCare_title">PETCare</string>
    <string name="PETCare_options">Opciones de Aplicación para Veterinarios</string>
    <string name="btn_record_clients_fragment">Ver Registro de Clientes</string>
    <string name="btn_state_pets">Estados Actuales de Mascotas</string>
    <string name="btn_inventory_vet">Ver Inventario de Veterinaria</string>
    <string name="btn_call_clients">Llamado para Clientes</string>
    <string name="inventory_tittle_submenu">Inventario</string>
    <string name="btn_medications_submenu">Medicamentos</string>
    <string name="btn_tools_submenu">Herramientas</string>
    <string name="btn_pets_food_submenu">Comida Mascotas</string>
    <string name="btn_other_products_submenu">Otros Productos</string>
    <string name="tittle_PETCare_submenu">PETCare Submenu</string>
    <string name="client_menu_tittle">PETCare</string>
    <string name="options_menu_clients"> Opciones de aplicación para Clientes</string>
    <string name="btn_request_opening_hours"> Solicitar horario de atención</string>
    <string name="btn_check_date_operation_hours"> Revisar fecha y horario de atención</string>
    <string name="btn_order_product"> Ordenar Producto</string>
    <string name="navigation_drawer_client_open">Abrir menú</string>
    <string name="navigation_drawer_client_close">Cerrar menú</string>
    <string name="pay_options_tittle">PETCare</string>
    <string name="pay_options_client"> Opciones de pago cliente</string>
    <string name="btn_first_option">Mastercard</string>
    <string name="btn_second_option"> BancoEstado</string>
    <string name="btn_third_option">Otros</string>
    <string name="record_client_part1_tittle">PETCare</string>
    <string name="record_client_menu">Registro de Clientes</string>
    <string name="btn_client1">Cliente1</string>
    <string name="btn_client2">Cliente2</string>
    <string name="btn_client3">Cliente3</string>
    <string name="btn_client4">Cliente4</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="record_client_title">PETCare</string>
    <string name="record_client_subtitle">Registro cliente1</string>
    <string name="name_pets_client">Nombre(s) de Mascota(s) cliente 1</string>
    <string name="species_pets_client">Raza(s) de mascota(s) cliente 1</string>
    <string name="age_pets_client">Edad(s) de mascota(s) cliente 1</string>
    <string name="treatment_actual_pets_client">Tratamiento(s) actual de mascota(s) de cliente 1</string>
    <string name="treatment_text_pets_client">Tratamiento(s) de mascota(s) cliente 1</string>
    <string name="state_actual_pets_client">Estado(s) actual de mascota(s) cliente 1</string>
    <string name="state_text_pets_client">Estado(s) actual(es) de la(s) mascota(s) de cliente 1</string>
    <string name="inventory_tittle">PETCare</string>
    <string name="inventory_subtitle">Opción ver inventario</string>
    <string name="btn_medications">Medicamentos</string>
    <string name="btn_tools">Herramientas</string>
    <string name="btn_pets_food">Comida Mascotas</string>
    <string name="btn_other_products">Otros Productos</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="medicines_info">Información de medicamentos</string>
    <string name="tools_info">Información de herramientas</string>
    <string name="food_info">Información de comida para mascotas</string>
    <string name="other_products_info">Información de otros productos</string>
    <string name="call_client_title">PETCare</string>
    <string name="call_client_subtitle">Opción llamado a Clientes</string>
    <string name="client1_label">Cliente 1:</string>
    <string name="btn_call_client1">Llamar a cliente 1</string>
    <string name="client2_label">Cliente 2:</string>
    <string name="btn_call_client2">Llamar a cliente 2</string>
    <string name="client3_label">Cliente 3:</string>
    <string name="btn_call_client3">Llamar a cliente 3</string>
    <string name="selection_attention_title">PETCare</string>
    <string name="selection_attention_subtitle">Selección de atención hora a cliente</string>
    <string name="enter_name_client">Ingresar Nombre cliente:</string>
    <string name="text_name_client">Ingresar Nombre aquí</string>
    <string name="enter_lastname_client">Ingresar apellido cliente:</string>
    <string name="text_lastname_client">Ingresar Apellido aquí</string>
    <string name="enter_email_client">Ingresar e-mail:</string>
    <string name="enter_rut_client">Ingresar RUT:</string>
    <string name="text_rut_client">Ingresar RUT aquí</string>
    <string name="enter_names_pets">Ingresar nombre(s) mascota(s):</string>
    <string name="text_names_pets">Ingresar Nombre(s) mascota(s) aquí</string>
    <string name="btn_OK">OK</string>
    <string name="revision_title">PETCare</string>
    <string name="revision_subtitle">Revisión horario de atención</string>
    <string name="name_client1">Nombre cliente 1</string>
    <string name="hint_date">Seleccionar fecha de inicio</string>
    <string name="hint_date_end">Seleccionar fecha de fin</string>
    <string name="hint_time">Seleccionar hora</string>
    <string name="order_product_title">PETCare</string>
    <string name="order_product_subtitle">Opción ordenar producto</string>
    <string name="product_to_order">Producto a ordenar:</string>
    <string name="text_name_product">Ingresar nombre Producto</string>
    <string name="type_product">Ingresar tipo de producto (comida, etc):</string>
    <string name="enter_order_email_client">Ingresar email cliente aquí:</string>
    <string name="email_client">Ingresar e-mail cliente aquí:</string>
    <string name="form_delivery">Ingresar si se irá a buscar a veterinaria o se enviará a domicilio:</string>
    <string name="text_form_Delivery">Ingresar forma de entrega a producto</string>
    <string name="btn_order_product_ok">OK</string>
    <string name="add_product_title">PETCare</string>
    <string name="add_product_subtitle">Opción Agregar producto</string>
    <string name="name_add_product">Ingresar nombre producto:</string>
    <string name="text_add_name_product">Ingresar el nombre del producto aquí</string>
    <string name="description_add_product">Ingrese descripción del producto:</string>
    <string name="text_description_add_product">Ingresar la descripción del producto</string>
    <string name="type_add_product">Ingresar tipo de producto:</string>
    <string name="text_add_type_product">Ingresar el tipo de producto</string>
    <string name="price_add_product">Ingresar precio del producto:</string>
    <string name="text_price_add_product">Ingresar el precio del producto</string>
    <string name="amount_add_product">Ingresar cantidad de producto que agregar:</string>
    <string name="text_add_amount_product">Ingresar cantidad de producto que agregar</string>
    <string name="btn_add_save">Guardar</string>
    <string name="modify_product_title">PETCare</string>
    <string name="modify_product_subtitle"> Opción Modificar producto</string>
    <string name="name_modify_product">Ingresar nombre producto:</string>
    <string name="text_modify_name_product">Ingresar el nombre del producto aquí</string>
    <string name="description_modify_product">Ingrese descripción del producto:</string>
    <string name="text_description_modify_product">Ingresar la descripción del producto aqui</string>
    <string name="type_modify_product">Ingresar tipo de producto:</string>
    <string name="text_modify_type_product">Ingresar el tipo de producto:</string>
    <string name="price_modify_product">Ingresar precio del producto aqui:</string>
    <string name="text_price_modify_product">Ingresar el precio del producto aqui</string>
    <string name="amount_modify_product"> Ingresar la cantidad de  producto que se deben modificar:</string>
    <string name="text_modify_amount_product">Ingresar cantidad de  producto modificados aqui</string>
    <string name="btn_modify_save">Actualizar</string>
    <string name="delete_product_title">PETCare</string>
    <string name="delete_product_subtitle"> Opción Eliminar producto</string>
    <string name="name_delete_product">Ingresar nombre producto:</string>
    <string name="text_delete_name_product">Ingresar el nombre del producto</string>
    <string name="description_delete_product">Ingrese descripción del producto:</string>
    <string name="text_description_delete_product">Ingresar la descripción del producto</string>
    <string name="type_delete_product">Ingresar tipo de producto:</string>
    <string name="text_delete_type_product">Ingresar el tipo de producto:</string>
    <string name="price_delete_product">Ingresar precio del producto</string>
    <string name="text_price_delete_product">Ingresar el precio del producto </string>
    <string name="amount_delete_product">  Ingresar cantidad de producto a eliminar:</string>
    <string name="text_delete_amount_product"> Ingresar la cantidad de productos a eliminar</string>
    <string name="btn_delete_save">Eliminar</string>
    <string name="confirmation_delete_title">PETCare</string>
    <string name="confirmation_delete_subtitle">Confirmación de eliminación producto</string>
    <string name="warning">Advertencia</string>
    <string name="message_confirmation">Una vez borrado, la información borrada será imposible de recuperar. ¿Aún desea continuar con la acción de eliminación?</string>
    <string name="btn_warning_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="inventory_medications_title">PETCare</string>
</resources>