<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4CAF50"
    tools:context=".OpcionEliminarVeterinariaActivity">

    <TextView
        android:id="@+id/textView74"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/delete_product_title" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/delete_product_subtitle" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/name_delete_product" />

    <EditText
        android:id="@+id/editTextText28"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_delete_name_product" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/description_delete_product" />

    <EditText
        android:id="@+id/editTextText29"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_description_delete_product" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/type_delete_product" />

    <EditText
        android:id="@+id/editTextText30"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_delete_type_product" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/price_delete_product" />

    <EditText
        android:id="@+id/editTextText31"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_price_delete_product" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/amount_delete_product" />

    <EditText
        android:id="@+id/editTextText32"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_delete_amount_product" />

    <Button
        android:id="@+id/button28"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/btn_delete_save" />
</LinearLayout>