<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4CAF50"
    tools:context=".OpcionModificarVeterinariaActivity">

    <TextView
        android:id="@+id/textView67"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/modify_product_title" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/modify_product_subtitle" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/name_modify_product" />

    <EditText
        android:id="@+id/editTextText23"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_modify_name_product" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/description_modify_product" />

    <EditText
        android:id="@+id/editTextText24"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_description_modify_product" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/type_modify_product"/>
    <EditText
        android:id="@+id/editTextText25"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_modify_type_product" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/price_modify_product" />

    <EditText
        android:id="@+id/editTextText26"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_price_modify_product" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/amount_modify_product" />

    <EditText
        android:id="@+id/editTextText27"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_modify_amount_product" />

    <Button
        android:id="@+id/button27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/btn_modify_save" />
</LinearLayout>