<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4CAF50"
    tools:context=".OpcionAgregarVeterinariaActivity">

    <TextView
        android:id="@+id/textView60"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/add_product_title" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/add_product_subtitle" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/name_add_product" />

    <EditText
        android:id="@+id/editTextText18"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_add_name_product" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/description_add_product" />

    <EditText
        android:id="@+id/editTextText19"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_description_add_product" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/type_add_product" />

    <EditText
        android:id="@+id/editTextText20"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_add_name_product" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/price_add_product" />

    <EditText
        android:id="@+id/editTextText21"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_price_add_product" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/amount_add_product" />

    <EditText
        android:id="@+id/editTextText22"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:text="@string/text_add_amount_product" />

    <Button
        android:id="@+id/button26"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/btn_add_save" />
</LinearLayout>